--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
 		<title>kebo</title>
 	</head>
 	<body>
-		<div class="kebo-wrapper d-flex flex-direction-row">
-			<section class="kebo-sidebar bg-white">sidebar</section>
-			<section class="kebo-main">content</section>
+		<div class="kebo-wrapper">
+			<section class="kebo-sidebar"></section>
+			<section class="kebo-middlebar">
+				<nav class="navbar">
+					<a href="#" class="kebo-logo-text">Dashboard</a>
+				</nav>
+			</section>
+			<section class="kebo-main">
+				<nav class="navbar bg-white">
+					halo
+				</nav>
+				<div class="kebo-content-header">
+					<h2>Billing</h2>
+					<p class="text-muted mb-0">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Voluptas non illo assumenda architecto harum quidem
+						corrupti. Doloremque aspernatur modi enim at natus
+						doloribus laboriosam a itaque rem repudiandae, quod ab?
+					</p>
+				</div>
+			</section>
 		</div>
 
 		<script src="./src/js/main.js"></script>
