add top right navbar list

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 			<section class="kebo-sidebar"></section>
 			<section class="kebo-middlebar">
 				<nav class="navbar">
-					<a href="#" class="kebo-logo-text">Dashboard</a>
+					<a href="#" class="kebo-logo-text font-weight-bold">kébo</a>
 				</nav>
 			</section>
 			<section class="kebo-main">
 				<nav class="navbar bg-white">
-					halo
+					<ul class="navbar-list">
+						<li>Home</li>
+						<li>Account</li>
+					</ul>
 				</nav>
 				<div class="kebo-content-header">
 					<h2>Billing</h2>
